Add Visual Studio build directories to the ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ test/test
 test/test.xcodeproj/project.xcworkspace
 test/test.xcodeproj/xcshareddata
 test/test.xcodeproj/xcuserdata
+test/.vs
+test/Win32
+test/x64
