--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Orchestrate or schedule a set of jobs
+version: 2
 workflows:
-  test:
+  version: 2
+  dist-compile:
     jobs:
-      - make -f test/Makefile
-      - test/test
+      - test
+jobs:
+  test:
+    docker:
+      - image: gcc:8.2
+    steps:
+      - checkout
+      - run: make -f test/Makefile
+      - run: test/test
