--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ matrix:
       compiler: gcc
       os: linux
       script:
-        - make -f test/Makefile
+        - make -C test/
         - test/test
     - name: macOS
       compiler: clang
       os: osx
       osx_image: xcode7.3
       script:
-        - make -f test/Makefile
+        - make -C test/
         - test/test
