--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.o
 test/test
-test/test.xcodeproj/project.xcworkspace
+test/test.xcodeproj/project.xcworkspace/xcshareddata
+test/test.xcodeproj/project.xcworkspace/xcuserdata
 test/test.xcodeproj/xcshareddata
 test/test.xcodeproj/xcuserdata
 test/.vs
