--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,8 @@
-CXXFLAGS=-c -std=c++11 -Wall -O2 -I../include
+CXXFLAGS=-std=c++11 -Wall -O2 -I../include
 SOURCES=main.cpp
 BASE_NAMES=$(basename $(SOURCES))
 OBJECTS=$(BASE_NAMES:=.o)
+DEPENDENCIES=$(OBJECTS:.o=.d)
 EXECUTABLE=test
 
 all: $(EXECUTABLE)
@@ -9,8 +10,10 @@ all: $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CXX) $(OBJECTS) $(LDFLAGS) -o $@
 
+-include $(DEPENDENCIES)
+
 %.o: %.cpp
-	$(CXX) $(CXXFLAGS) $< -o $@
+	$(CXX) -c $(CXXFLAGS) -MMD -MP $< -o $@
 
 .PHONY: clean
 clean:
